<resources>
    <string name="app_name">Sport App</string>
    <string name="ret_text">Bentornato</string>
    <string name="wel_text">ti da il benvenuto</string>
    <string name="log_text">Accedi</string>
    <string name="log_button">Login</string>
    <string name="out_button">Esci</string>
    <string name="pass_in">Password</string>
    <string name="user_in">Email / Username</string>
    <string name="profile_title">Il tuo profilo</string>
    <string name="passtxt">Cambia password</string>
    <string name="registertext">Ti diamo il benvenuto</string>
    <string name="regtext">Registrati ora</string>
    <string name="regbutton">Registrati</string>
    <string name="your">Squadre preferite</string>
    <string name="register">Non hai un account? Registrati</string>
    <string name="allsport">Tutte le squadre</string>
</resources>